fixed x-axis overflow in main section

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -36,6 +36,10 @@ img {
    max-width: 100%;
 }
 
+.svg-move{
+   position: absolute;
+}
+
 .container {
    padding-left: 24px;
    padding-right: 24px;
