--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,3 +1,10 @@
+.header{
+   .svg-move{
+      top: -57px;
+      left: 1500px;
+   }
+}
+
 .navbar {
    position: fixed;
    top: 0;
