--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -78,8 +78,9 @@
 
       &__content{
          display: grid;
-         grid-template-columns: repeat(3,350px);
+         grid-template-columns: repeat(3,1fr);
          grid-gap: 0 30px;
+         
       }
 
       .card{
